# AutoSerialBridge

./: .gitignore  CMakeLists.txt  PERFORMANCE_OPTIMIZATIONS.md  README.md  TODO  package.xml
.agent/rules/: code-guide.md
config/: protocol.yaml  serial_data.yaml
include/auto_serial_bridge/: generated_config.hpp  packet_handler.hpp  serial_controller.hpp
include/serial_pkg/: generated_bindings.hpp  generated_config.hpp  packet_handler.hpp  protocol.hpp  serial_controller.hpp
launch/: launch_serial.py  serial_bridge_by_component.launch.py  serial_bridge_by_node.launch.py  test_serial.luanch.py
mcu_output/: protocol.c  protocol.h
scripts/: codegen.py  create_virtual_serial.sh
src/: serial_controller.cpp  serial_node.cpp
test/: conftest.py  test_batch.cpp  test_edge_condition.cpp  test_edge_situation.cpp  test_main.py  test_packet_handler.cpp  test_protocol_structure.cpp  test_scocat.py  test_transmit_verify.cpp
