<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serial_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="edmounds@163.com">rc3</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>serial_driver</depend>
  <depend>rclcpp_components</depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>python3-serial</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>